2006-02-15 Jim Garlick <garlick@llnl.gov>

	* filldentry.c: on AIX, call sync() not fsync() after rename.

2006-02-14 Jim Garlick <garlick@llnl.gov>

	* scrub.spec: additional fixes for Fedora standards [Ben Woodard]

	* scrub.c: change dirent_pattern[] so it will work on OS X.

2006-02-13 Jim Garlick <garlick@llnl.gov>

	* scrub.c: force char special file on !linux, allow char or blk 
	special file on linux.

	* scrub.c: refactored main().

	* scrub.c: write first pattern while filling up disk with -X.

	* fillfile.c: growfile() now takes pattern buffer.

2006-02-09 Jim Garlick <garlick@llnl.gov>

	* getsize.c: replace lseek algorithm (not portable!) with arch-
	specific ioctls.

2006-02-01 Jim Garlick <garlick@llnl.gov>

	* scrub.spec: fixed some problems uncovered by rpmlint [Ben Woodard]

2006-01-30 Jim Garlick <garlick@llnl.gov>

	* util.[ch]: use uint8_t * instead of void * to avoid warnings
	  with solaris cc. [Review: John]

	* scrub.c: replace BLKSIZE macro with blksize function with no
	  power of two constraints, also more readable. [Review: Jimmy]

	* Makefile: fix rule for genrand test. [Review: Jimmy]

	* genrand.c: fix incorrect buffer calculation in genrand().

	* scrub.c: added -p nnsa|dod|old option. [Review: Jimmy]

	* scrub.c: removed -o option.

	* scrub.1: updated to reflect option changes and make the three
	  scrub modes more explicit. [Review: Jimmy]

	* */*.c: include stdint.h only ifdef __FreeBSD__. [Review: Jimmy]

2006-01-20 Jim Garlick <garlick@llnl.gov>

	* scrub.c: Apple OS X: scrub HFS resource fork if present.
	  Ref: SourceForge SRM feature request 668257. [Review: Jimmy, Chuck]

	* scrub.c: refuse to play if file to be scrubbed is zero length.

	* scrub.c: change checks for random verify and 0/random filldentry
	  into assertions.

	* fillfile.c: open file O_WRONLY intead of O_RDWR.

2005-12-13 Jim Garlick <garlick@llnl.gov>

	* scrub.c: give -D an argument which will be the new name for
	the file.
